@@ -1,0 +1,19 @@
+#import "cocos2d.h"
+
+//CLASS INTERFACE
+@interface AppController : NSObject <UIAccelerometerDelegate, UIAlertViewDelegate, UITextFieldDelegate, UIApplicationDelegate>
+{
+	UIWindow *window;
+}
+@end
+
+
+@interface Layer1 : CCLayer
+{
+}
+@end
+
+@interface Layer2 : CCLayer
+{
+}
+@end
